tests/samples/negative/expressions/logical_non_bool.ax
module logical_non_bool;

fn main() -> i32 {
    if 1 && 2 {
        return 1;
    }
    return 0;
}
